adding label to tab

--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lato|Open+Sans|Spectral" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="https://maps.googleapis.com/maps/api/js?v=3.27&libraries=places,geometry&key=AIzaSyCZUQ1J_gOtxxYvVwDzInu1pDsz7qBgzGM"></script>
-    <title>React App</title>
+    <title>Sarah Baldwin</title>
   </head>
   <body>
     <noscript>
